--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../run/media/AbdulRauf/MyGame/Air_way_V2-HQ.apk"
+export_path="../Air_way_V2-HQ.apk"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
